etc/options.css
/* ... */
.logo.daltoncourseswordmark {
	background-image: url("../images/logos/whitebg/daltoncourseswordmark.png");
	width: 237px;
	height: 35px;
}

#features > ul, #services > ul {
	list-style-type: none;
}
.col-1-4 {
	border: solid 1px black;
	border-radius: 5px;
	padding: 10px;
	margin: 5px;
	width: 300px;
	height: 140px;
}
.grid {
	max-width: none;
	padding-top: 0;
}
#features > .grid > li[data-componentIndex=bootstrap] > .feature > .featureDesc:after {
	margin-top: 10px;
	content: ' You can\'t disable this feature because this will break things. If you would like to turn this off, disable Courses+.';
}
#features > .grid > li[data-componentIndex=bootstrap] > .feature > .featureCheck {
	display: none;
}
.featureCheck {
	margin-right: 4px !important;
}

label {
	font-weight: normal;
}

.serviceSortable {
	background-color: #ddd;
	list-style-type: none;
	margin: 0;
	padding: 0;
	padding-top: 25px;
	min-width: 200px;
	margin-right: 10px;
	min-height: 200px;
	position: relative;
}
.serviceSortable:before {	
	font-size: 16px;
	font-weight: bold;
	position: absolute;
	top: 3px;
	left: 5px;
}
.serviceSortable li {
	cursor: move;
	display: block;
	margin: 0 3px 3px 3px;
	padding: 2px;
	padding-left: 17px;
	min-height: 32px;
	font-size: 18px;
}
.serviceSortable li:not(.service-sortable-highlight):before {
	font-family: "FontAwesome";
	content: "\f047";
	position: relative;
	left: -6px;
}


.service-sortable-highlight {
	background-color: #eee;
}

#menubarServicesInUse:before {
	content: "Enabled";
}
#menubarServicesEligible:before {
	content: "Eligible";
}
#menubarServicesUneligible:before {
	content: "Uneligible";
}

html, body {
	margin-top: 0;
	overflow: hidden;
	width: 100%;
	height: 100%;
}
header {
	background: white;
	border-bottom: 2px solid black;
	box-shadow: 1px 1px 1px black;
	height: 70px;
	width: 100%;

	padding-left: 10px;
	padding-right: 10px;

	position: fixed;
	top: 0;
	left: 0;

	z-index: 1000;
}
header > h1 {
	margin-top: 12px;
	width: 300px;
}
header > div {
	font-size: 24px;
	margin-top: 15px;
}
header > h1 > span {
	font-size: 20px;
}

#left-pane {
	position: fixed;
	top: 0;
	left: 0;

	background: white;
	border-right: 2px solid black;
	box-shadow: 1px 1px 1px black;
	cursor: pointer;
	width: 300px;
	height: 100%;
	z-index: 998;

	padding-top: 70px;
}

#left-pane > ul {
	display: block;
	list-style-type: none;
	height: 100%;
	padding-left: 0px;
	overflow-y: scroll;
}

#left-pane > ul > li {
	padding: 10px;
	transition: background-color .2s ease-in-out;
}
#left-pane > ul > li:not(:last-child) {
	border-bottom: 1px solid black;
}
#left-pane > ul > li:hover {
	background-color: #eee;
}

.section-name {
	font-size: 18px;
}
.section-desc {
	font-size: 15px;
}

.page {
	opacity: 0;
	position: fixed;
	top: 0;
	left: 310px;
	padding-top: 80px;
	padding-left: 3px;
	overflow-x: hidden;
	overflow-y: auto;
	width: 100%;
	height: 100%;
	transition: opacity 0.25s;
}
.page.current {
	opacity: 1;
	z-index: 999;
}

#page-container {
	height: 100%;
	width: 100%;
	padding-left: 300px;
	padding-right: 10px;
}

